--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## What this app is / will be A leader board that tracks the Win/Loss ratios of summoners that play ultimate bravery.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "server": "nodemon ./server/server.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,11 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "webpack": "^4.30.0"
+    "babel-loader": "^8.0.5",
+    "babel-preset-minify": "^0.5.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1"
   }
 }
