--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^7.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "mongoose": "^5.5.5",
     "nodemon": "^1.19.0",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
