--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## What this app is / will be A leader board that tracks the Win/Loss ratios of summoners that play ultimate bravery.",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode development",
+    "build": "webpack --mode development -w",
     "server": "nodemon ./server/server.js"
   },
   "repository": {
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/ryanferrer/brave-beetle#readme",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "express": "^4.16.4",
+    "jquery": "^3.4.1",
     "kayn": "^0.9.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
@@ -30,11 +32,13 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "babel-preset-minify": "^0.5.0",
+    "css-loader": "^2.1.1",
     "dotenv": "^7.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mongoose": "^5.5.5",
     "nodemon": "^1.19.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
   }
