--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## What this app is / will be A leader board that tracks the Win/Loss ratios of summoners that play ultimate bravery.",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode development -w",
+    "build": "webpack-dev-server --mode development -w --hot",
     "server": "nodemon ./server/server.js"
   },
   "repository": {
@@ -19,11 +19,13 @@
   "homepage": "https://github.com/ryanferrer/brave-beetle#readme",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jquery": "^3.4.1",
     "kayn": "^0.9.8",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "webpack-dev-server": "^3.5.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
